correct action color on dark mode

--- a/sass/_dark.scss
+++ b/sass/_dark.scss
@@ -102,7 +102,7 @@
     color: #3b5788;
   }
 
-  .chatRoleplayAction {
+  .chatRoleplayAction, .chatAction {
     color: #ff7474
   }
 
